# Helix-CLI

./: CLAUDE.md  HELIX-SEC.md
.claw/: instructions.md
.claw/scripts/: setup-claude-red.ps1
.claw/skills/helix-sec/: SKILL.md
rust/: .gitignore  models.json  payload-llama.json  payload.json  payload2.json  payload3.json  payload4.json  scratch_nvidia.rs
rust/.claw/plugins/: installed.json
rust/crates/api/src/: client.rs  lib.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: proxy_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/src/: bash.rs  config.rs  conversation.rs  hooks.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  prompt.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs
